<resources>
    <string name="editbtn56">Edit</string>
    <string name="name23">S.A.Tharaka </string>
    <string name="app_name">Bon-Apetit</string>
    <string name="home">Home</string>
    <string name="loginPgBusinessName">Bon-Appetit</string>
    <string name="btn_login">Login</string>
    <string name="btnSignUp">Sign up</string>
    <string name="addstock">Add Stock</string>
    <string name="Ingredient">Ingredients</string>
    <string name="qty">Quantity</string>
    <string name="btnAdd">Add</string>
    <string name="profiletopic">Customer Profile</string>
    <string name="customername">John</string>
    <string name="editbutton">Edit</string>
    <string name="btnCacncel">Cancel</string>
    <string name="stock">Stock</string>
    <string name="stockid">StockID</string>
    <string name="stockname">Stock Name</string>
    <string name="unitprice">Unit Price</string>
    <string name="lblUpadateStock">Update Stock</string>
    <string name="lblUP">Unit Price</string>
    <string name="dummy_qty_val">20kg</string>
    <string name="dummy_val_ingreditents">Rice(samba)</string>
    <string name="dummy_up_val">Rs10000/=</string>
    <string name="popularRecipes">Popular Recipes</string>
    <string name="submarineText">Submarines</string>
    <string name="clubSandwitchText">Club Sandwitches</string>
    <string name="pizzaText">Pizza</string>
    <string name="brownies">Brownies and Cakes</string>
    <string name="dripCake">Drip Cake</string>
    <string name="chocolateCake">Chocolate Cake</string>
    <string name="brownie">Brownies</string>
    <string name="addRecipes">Add Recipes</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeImage">Recipe Image</string>
    <string name="chooseFile">Choose File</string>
    <string name="submit">Submit</string>
    <string name="message1">Use + button to add more ingredients!</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="chooseIngredient">Choose Ingredient</string>
    <string name="method">Method</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="viewRecipe">View Recipe</string>
    <string name="message2">The recipe of which the details are needed: </string>
    <string name="bonappetit">Bon-Appetit</string>
    <string name="basket">Basket</string>
    <string name="edit">edit</string>
    <string name="servins">2 servings</string>
    <string name="price">Rs.2300.00</string>
    <string name="price2">Rs.2600.00</string>
    <string name="total">Rs.4900.00</string>
    <string name="checkout">Check-Out</string>
    <string name="cancel">Cancel</string>
    <string name="editProfile">Edit Profile</string>
    <string name="cusname">S.A.Tharaka</string>
    <string name="name2">Full Name</string>
    <string name="email">tharaka@gmail.com</string>
    <string name="email2">Email</string>
    <string name="phn">0763456784</string>
    <string name="phn2">Contact Number</string>
    <string name="address">35/67,Colombo</string>
    <string name="address2">Address</string>
    <string name="editbtn">Edit</string>
    <string name="btncancel2">Cancel</string>
    <string name="topic1">Customer Profile</string>
    <string name="btnedit1">Edit</string>
    <string name="food1">Fried Rice</string>
    <string name="food2">Chicken pie</string>
    <string name="food3">Pizza</string>
    <string name="like1">809</string>
    <string name="like2">503</string>
    <string name="topic3">Bon-Appetit</string>
    <string name="textfood3">Biriyani</string>
    <string name="textingredients1">Rice(Samba) 500g</string>
    <string name="textingredients2">chicken  pieces 250g</string>
    <string name="seemore">See more</string>
    <string name="textname3">W.T.Y.Rathnayaka</string>
    <string name="ingredientflour">flour 1kg</string>
    <string name="ingredient40">ingredients</string>
    <string name="ingredientcheese">Mozzarella cheese</string>
    <string name="food4">Pizza</string>
    <string name="textname4">F.H.Cristeen</string>
    <string name="food5">Yellow Rice</string>
    <string name="brownie1kg">Brownies - 1kg</string>
    <string name="ingredients">Ingredients</string>
    <string name="chocolate">Semi-Sweet Cooking Chocolate(Dark)</string>
    <string name="icingSugar">Icing Sugar</string>
    <string name="eggs">Eggs</string>
    <string name="cocoapowder">Cocoa Powder</string>
    <string name="butter">Butter</string>
    <string name="flour">Flour</string>
    <string name="sugar">Brown Sugar</string>
    <string name="salt">Salt</string>
    <string name="vanilla">Vanilla Essence</string>
    <string name="delete">Delete</string>
    <string name="updateRecipe">Update Recipe</string>
    <string name="deleteRecipe">Delete Recipe</string>
    <string name="updateFile">Update Image</string>
    <string name="orderNow">Order Now</string>
    <string name="addresstext">Address</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="datetext">Date</string>
    <string name="date">05/11/2020</string>
    <string name="settimetext">Set time:</string>
    <string name="settime">12.00PM</string>
    <string name="promocode">Enter Promo Code</string>
    <string name="totaltext">Total:</string>
    <string name="appName">Bon-Appetit</string>
    <string name="cart">Cart</string>
    <string name="history">Purchase History</string>
    <string name="profile">User Profile</string>
    <string name="rating">Ratings</string>
    <string name="contactUs">Contact Us</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_employee_login">employee_login</string>
    <string name="topic4">Bon-Appetit</string>
    <string name="name100">Recipe name:</string>
    <string name="ingredientadd">Add Ingredients:</string>
    <string name="recipie">How to make:</string>
    <string name="postbutton">POST</string>
    <string name="deletebutton">Delete</string>
    <string name="editebutton20">Edit</string>
    <string name="texteditprofile1000">Edit Your Post</string>
    <string name="recpiename1000">Chicken pie</string>
    <string name="ingedientedit200">Chicken</string>
    <string name="howtomake">Cut chicken in to pieces.Then</string>
    <string name="lbl_emp_id">Employee ID</string>
    <string name="emp_login_title">Employee Login</string>
    <string name="historytext">My History</string>
    <string name="orderid">Order ID</string>
    <string name="item">Item</string>
    <string name="tot">Tot_Price</string>
    <string name="orderdate">Order Date</string>
    <string name="orderid1">#BE1290</string>
    <string name="item1">Brownies</string>
    <string name="tot1">Rs.1500.00</string>
    <string name="amount1">5kg</string>
    <string name="orderdate1">Aug.08.2020</string>
    <string name="orderid2">#BY1200</string>
    <string name="item2">Brownies</string>
    <string name="tot2">Rs.2300.00</string>
    <string name="amount2">10</string>
    <string name="orderdate2">May.05.2020</string>
    <string name="orderid3">#MY7200</string>
    <string name="tot3">Rs.2600.00</string>
    <string name="amount3">5</string>
    <string name="orderdate3">April.08.2019</string>
    <string name="emp_home_btn1">Add Recepies</string>
    <string name="emp_home_btn2">View Recepies</string>
    <string name="emp_home_btn3">Add Ingredients to stock</string>
    <string name="emp_home_btn4">View Stock</string>
    <string name="emp_home_btn5">View Orders</string>
    <string name="recipetable">Recipe Table</string>
    <string name="code">Code</string>
    <string name="recipe">Recipe</string>
    <string name="uprice">Unit Price</string>
    <string name="code1">#r001</string>
    <string name="code2">#r002</string>
    <string name="code3">#r003</string>
    <string name="uprice1">Rs.1500.00</string>
    <string name="search">Enter Recipe ID</string>
    <string name="topic300">Create an Account</string>
    <string name="btnregister">Register Now</string>
    <string name="password">Password</string>
    <string name="pass">.........</string>
    <string name="addressupdate">45/89,Malabe</string>
    <string name="lbl_orders">Active Orders</string>
    <string name="col_customer_ID">Cust ID</string>
    <string name="customerID_dummy_val1">C001</string>
    <string name="customerID_dummy_val2">C002</string>
    <string name="customerID_dummy_val3">C003</string>
    <string name="customerID_dummy_val4">C004</string>
    <string name="lbl_reject_order">Reject order</string>
    <string name="btn_reject_order">Reject</string>
    <string name="btn_back">Back</string>
    <string name="lbl_btn_update">Update</string>
    <string name="title_activity_add_ingredients">AddIngredients</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="done">DONE</string>
    <string name="custnic">NIC</string>
    <string name="category">Category</string>
    <string name="Cash">Cash</string>
    <string name="Card">Card</string>
    <string name="txtrol">Reorder Level</string>
    <string name="txtup">Unit price</string>
    <string name="measureunitKg">kg</string>
    <string name="measureunitliters">Liters</string>
    <string name="measureunitother">Other</string>
    <string name="propictitle">Select profile picture</string>
    <string name="btnupload">upload</string>
    <string name="btnskip">Skip</string>
    <string name="btnselect">+</string>
    <string name="addpost">addpost</string>
    <string name="foodhub">Food Hub</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>