<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="2dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stockid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView13"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="10dp"
                android:text="@string/customerID_dummy_val1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="300px"
                android:text="@string/lblUpadateStock"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView13"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="700px"
                android:text="@string/updateFile"
                android:textSize="16sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>